Fixed misaligned labels

--- a/pages/index/js/core/topsites/topsites.scss
+++ b/pages/index/js/core/topsites/topsites.scss
@@ -55,6 +55,7 @@
 						letter-spacing:1.5px;
 						font-weight:200;
 						padding-left:5px;
+						padding-bottom:3px;
 						color:white;
 						white-space: nowrap;
 						overflow: hidden;
